@@ -2744,22 +2744,28 @@ argument_list|(
 name|allocatedContainer
 argument_list|)
 expr_stmt|;
-comment|// If this container is used to run AM, update the leaf queue's AM usage
+comment|// If not running unmanaged, the first container we allocate is always
+comment|// the AM. Set the amResource for this app and update the leaf queue's AM
+comment|// usage
 if|if
 condition|(
-name|getLiveContainers
+operator|!
+name|isAmRunning
 argument_list|()
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|1
 operator|&&
 operator|!
 name|getUnmanagedAM
 argument_list|()
 condition|)
 block|{
+name|setAMResource
+argument_list|(
+name|container
+operator|.
+name|getResource
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|getQueue
 argument_list|()
 operator|.
@@ -2885,6 +2891,80 @@ name|reserved
 argument_list|)
 expr_stmt|;
 block|}
+comment|// Check the AM resource usage for the leaf queue
+if|if
+condition|(
+operator|!
+name|isAmRunning
+argument_list|()
+operator|&&
+operator|!
+name|getUnmanagedAM
+argument_list|()
+condition|)
+block|{
+name|List
+argument_list|<
+name|ResourceRequest
+argument_list|>
+name|ask
+init|=
+name|appSchedulingInfo
+operator|.
+name|getAllResourceRequests
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|ask
+operator|.
+name|isEmpty
+argument_list|()
+operator|||
+operator|!
+name|getQueue
+argument_list|()
+operator|.
+name|canRunAppAM
+argument_list|(
+name|ask
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getCapability
+argument_list|()
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"Skipping allocation because maxAMShare limit would "
+operator|+
+literal|"be exceeded"
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|Resources
+operator|.
+name|none
+argument_list|()
+return|;
+block|}
+block|}
 name|Collection
 argument_list|<
 name|Priority
@@ -2952,61 +3032,6 @@ argument_list|(
 name|priority
 argument_list|)
 expr_stmt|;
-comment|// Check the AM resource usage for the leaf queue
-if|if
-condition|(
-name|getLiveContainers
-argument_list|()
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|0
-operator|&&
-operator|!
-name|getUnmanagedAM
-argument_list|()
-condition|)
-block|{
-if|if
-condition|(
-operator|!
-name|getQueue
-argument_list|()
-operator|.
-name|canRunAppAM
-argument_list|(
-name|getAMResource
-argument_list|()
-argument_list|)
-condition|)
-block|{
-if|if
-condition|(
-name|LOG
-operator|.
-name|isDebugEnabled
-argument_list|()
-condition|)
-block|{
-name|LOG
-operator|.
-name|debug
-argument_list|(
-literal|"Skipping allocation because maxAMShare limit would "
-operator|+
-literal|"be exceeded"
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|Resources
-operator|.
-name|none
-argument_list|()
-return|;
-block|}
-block|}
 name|ResourceRequest
 name|rackLocalRequest
 init|=
