@@ -4883,47 +4883,6 @@ name|getTime
 argument_list|()
 argument_list|)
 expr_stmt|;
-comment|// Set amResource for this app
-if|if
-condition|(
-operator|!
-name|application
-operator|.
-name|getUnmanagedAM
-argument_list|()
-operator|&&
-name|ask
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|1
-operator|&&
-name|application
-operator|.
-name|getLiveContainers
-argument_list|()
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-name|application
-operator|.
-name|setAMResource
-argument_list|(
-name|ask
-operator|.
-name|get
-argument_list|(
-literal|0
-argument_list|)
-operator|.
-name|getCapability
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
 comment|// Release containers
 name|releaseContainers
 argument_list|(
